[tool.poetry]
name = "virginpulsehelper"
version = "0.1.0"
description = ""
authors = ["Colin McAllister <colinmca242@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
